update : 인터파크 항공권 크롤링 데이터 규격화 완료

--- a/waffle/javabackend/build.gradle
+++ b/waffle/javabackend/build.gradle
@@ -40,6 +40,10 @@ dependencies {
 
 	// mail
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
+
+	//json->map
+	implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
+
 }
 
 tasks.named('test') {
