--- a/waffle/javabackend/build.gradle
+++ b/waffle/javabackend/build.gradle
@@ -42,6 +42,6 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 }
 
-tasks.named('test') {
+test {
 	useJUnitPlatform()
 }
