--- a/waffle/reactfrontend/package.json
+++ b/waffle/reactfrontend/package.json
@@ -13,9 +13,12 @@
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
     "axios": "^1.5.0",
+    "format": "^0.2.2",
     "react": "^18.2.0",
     "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
+    "react-number": "^0.0.1-alpha4",
+    "react-number-format": "^5.3.1",
     "react-redux": "^8.1.2",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.15.0",
