--- a/chocobank/src/main/resources/application.yaml
+++ b/chocobank/src/main/resources/application.yaml
@@ -7,9 +7,9 @@ spring :
   datasource:
     hikari:
       driver-class-name: com.mysql.cj.jdbc.Driver
-      username: root
+      username: chocobar
       password: ssafy
-    url: jdbc:mysql://localhost:3306/mydb?useUniCode=yes&characterEncoding=UTF-8
+    url: jdbc:mysql://j9d109.p.ssafy.io/mydb?useUniCode=yes&characterEncoding=UTF-8
 
   # JPA setting
   jpa:
