--- a/waffle/reactfrontend/package.json
+++ b/waffle/reactfrontend/package.json
@@ -14,7 +14,9 @@
     "animate.css": "^4.1.1",
     "axios": "^1.5.0",
     "format": "^0.2.2",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-calendar": "^4.6.0",
     "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
     "react-number": "^0.0.1-alpha4",
@@ -23,6 +25,7 @@
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.5",
     "react-slick": "^0.29.0",
     "redux": "^4.2.1",
     "slick-carousel": "^1.8.1",
