--- a/waffle/pythonbackend/requirements.txt
+++ b/waffle/pythonbackend/requirements.txt
@@ -3,4 +3,4 @@ djangorestframework==3.14.0
 selenium==4.12.0
 mysqlclient==2.2.0
 Requests==2.31.0
-django-cors-headers=4.2.0
+django-cors-headers==4.2.0
