--- a/waffle/reactfrontend/package.json
+++ b/waffle/reactfrontend/package.json
@@ -22,6 +22,7 @@
     "react-date-range": "^1.4.0",
     "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-number": "^0.0.1-alpha4",
     "react-number-format": "^5.3.1",
     "react-redux": "^8.1.2",
