--- a/waffle/reactfrontend/package.json
+++ b/waffle/reactfrontend/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@react-icons/all-files": "^4.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -22,6 +23,7 @@
     "react-date-range": "^1.4.0",
     "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-number": "^0.0.1-alpha4",
     "react-number-format": "^5.3.1",
     "react-redux": "^8.1.2",
