--- a/waffle/javabackend/build.gradle
+++ b/waffle/javabackend/build.gradle
@@ -48,6 +48,9 @@ dependencies {
 	implementation 'io.springfox:springfox-boot-starter:3.0.0'
 	implementation 'io.springfox:springfox-swagger-ui:3.0.0'
 
+	//devtools
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
 }
 
 tasks.named('test') {
