--- a/waffle/reactfrontend/package.json
+++ b/waffle/reactfrontend/package.json
@@ -18,6 +18,7 @@
     "format": "^0.2.2",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.0",
     "react-calendar": "^4.6.0",
     "react-cookie": "^6.1.1",
     "react-date-range": "^1.4.0",
@@ -32,6 +33,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.7.5",
     "react-slick": "^0.29.0",
+    "react-transition-group": "^4.4.5",
     "redux": "^4.2.1",
     "slick-carousel": "^1.8.1",
     "styled-component": "^2.8.0",
