--- a/waffle/reactfrontend/package.json
+++ b/waffle/reactfrontend/package.json
@@ -29,7 +29,8 @@
     "react-number-format": "^5.3.1",
     "react-redux": "^8.1.2",
     "react-responsive": "^9.0.2",
-    "react-router-dom": "^6.15.0",
+    "react-router": "^6.16.0",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.5",
     "react-slick": "^0.29.0",
