--- a/waffle/javabackend/src/main/resources/application.yaml
+++ b/waffle/javabackend/src/main/resources/application.yaml
@@ -14,7 +14,7 @@ spring :
   # JPA setting
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: update
     database: mysql
     database-platform: org.hibernate.dialect.MySQL8Dialect
     properties:
